# rusty_word_builder

./: Cargo.toml  LICENSE  README.md  syllables.csv
src/: lib.rs  settings.rs  syllable.rs
